[package]
name = "poldercast"
version = "0.13.0"
license = "MIT OR Apache-2.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/primetype/poldercast"
homepage = "https://github.com/primetype/poldercast#README.md"
keywords = [ "P2P", "Topology" ]
description = """
Peer to Peer topology management
"""

[dependencies]
multiaddr = "0.3.1"
cid = "=0.3.1"
rand = "0.7"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rayon = "1.3.0"
lru = "^0.4.3"

[dev-dependencies]
rand_chacha = "0.2"
quickcheck = "0.8"
quickcheck_macros = "0.8"
serde_json = "1.0"
bincode = "1.2"
