[package]
name = "poldercast"
version = "1.1.2"
license = "MIT OR Apache-2.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/primetype/poldercast"
homepage = "https://github.com/primetype/poldercast#README.md"
keywords = [ "P2P", "Topology" ]
description = """
Peer to Peer topology management
"""

[dependencies]
keynesis = { version = "1.3.1" }
thiserror = "1.0"
hex = "0.4"
lru = "0.6"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

